# cell-agency

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW_2026-03-30.md  HEARTBEAT.md  MEMORY.md  README.md  SOUL.md  USER.md  pyproject.toml  run_crew.py  start_agency.sh  start_gateway.sh
.claude/: launch.json  settings.local.json
.openclaw/: workspace-state.json
analytics/: refine_performance.jsonl
approval_queue/: apr_20260330_133914_efba63.json  apr_20260330_133938_b9aeb7.json  apr_20260330_134021_1de4fe.json  apr_20260330_134021_a915b1.json  apr_20260330_193344_108b73.json  apr_20260330_193344_32795f.json  apr_20260330_193344_3d00cc.json  apr_20260330_193344_de8791.json
clients/refine/: brand_vault.md  (+2 more)
comms/: __init__.py  task_bus.py
core/: approval_engine.py  autonomy_engine.py  deliverable_manager.py  observability.py  paths.py  workflow_engine.py  workflow_registry.py
crews/: creative_crew.yaml  dev_crew.yaml  management_crew.yaml  marketing_ops_crew.yaml  strategy_crew.yaml
infra/: __init__.py  health_check.py  process_manager.py
mcp-servers/: ads_server.py  agency_server.py  asset_server.py  content_server.py  design_server.py  document_server.py  learning_server.py  social_server.py  video_server.py  web_server.py
permissions/: __init__.py  file_permissions.py  permissions.yaml
registry/: __init__.py  agent_registry.yaml  registry.py
routing/: __init__.py  router.py  routing_table.yaml
skills/: __init__.py  skill_tracker.py
tools/: TOOL_LIBRARY.md  __init__.py  crew_tools.py  deploy_tools.py  file_tools.py  image_tools.py  web_tools.py
(+53 files in other folders)
